Fixed bug with event dates, tested on iOS device, confirmed to be working properly

--- a/PetsMeetupsV3/src/pages/event/event.scss
+++ b/PetsMeetupsV3/src/pages/event/event.scss
@@ -8,4 +8,8 @@ page-event {
       text-align: right;
     }
   }
+
+  .full-width-button {
+    width: 100%;
+  }
 }
